[gd_scene load_steps=5 format=2]

[ext_resource path="res://sounds/metronome02.wav" type="AudioStream" id=1]
[ext_resource path="res://sounds/metronome01.wav" type="AudioStream" id=2]
[ext_resource path="res://NewTimer.gd" type="Script" id=3]
[ext_resource path="res://sounds/DigitalTower.wav" type="AudioStream" id=4]

[node name="NewTimer" type="Node2D"]
script = ExtResource( 3 )
measure_sound = true

[node name="StartTempo" type="Button" parent="."]
margin_left = 480.0
margin_top = 512.0
margin_right = 569.0
margin_bottom = 532.0
text = "Start Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopTempo" type="Button" parent="."]
margin_left = 480.0
margin_top = 576.0
margin_right = 568.0
margin_bottom = 596.0
text = "Stop Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="highClic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="lowClic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="StartTempo" to="." method="_on_StartTempo_pressed"]
[connection signal="pressed" from="StopTempo" to="." method="_on_StopTempo_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
